OO-8119: Avoid double scroll bars when something is displayed in the light box

--- a/src/main/webapp/static/themes/light/modules/_thirdparty.scss
+++ b/src/main/webapp/static/themes/light/modules/_thirdparty.scss
@@ -264,6 +264,10 @@
 body .basicLightbox {
 	z-index: 100000; 
 }
+/* prevent double scroll bar (mainly PDFs) */
+body:has(.basicLightbox) {
+	overflow: hidden;
+}
 
 /* TwentyTwenty image comparison */
 .twentytwenty-wrapper {
